# base_harness_v2

./: .gitignore  CLAUDE.md  IMPROVEMENTS.md  IMPROVEMENTS_REPORT.md  README.md  pyproject.toml
.claude/: project.yaml  settings.json
.claude/agents/: code-generator.md  impact-analyzer.md  verifier.md
.claude/commands/: create.md  extend.md  init.md  maintain.md
.claude/decisions/: 0001-open-questions-round1.md  0002-source-root.md  0003-create-mode-approval-gate.md  0004-dedicated-conda-env.md  0005-general-purpose-agent-fallback.md  0006-subagentstop-missing-report-detection.md  0007-extend-maintain-light-spec-confirmation.md  0008-harness-project-commit-separation.md  0009-description-gate-hook.md  0010-model-assignment-verified.md  0011-runs-current-concurrency.md  0012-runs-archiving-policy.md  0013-windows-python-fallback.md  0014-approval-gate-bypass-hardening.md  0015-init-doc-choices.md  README.md
.claude/hooks/: _manifest.py  _pyrun.sh  approval_gate.py  bash_approved_gate.py  branch_guard.py  description_gate.py  post_write_check.py  update_board.py
.githooks/: pre-commit
.github/workflows/: harness-check.yml
runs/: README.md
