[project]
name = "book-graph-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "neo4j",
    "fastapi",
    "langgraph",
    "langchain-anthropic",
    "pypdf",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
